add updating and deleting proposal for owner
